--- a/code-ref.html
+++ b/code-ref.html
@@ -144,6 +144,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.3" data-path="p5-projects.html"><a href="p5-projects.html#evolution-1-smart-rockets"><i class="fa fa-check"></i><b>2.3</b> Evolution 1: smart rockets</a></li>
 <li class="chapter" data-level="2.4" data-path="p5-projects.html"><a href="p5-projects.html#evolution-2-evolutionary-system"><i class="fa fa-check"></i><b>2.4</b> Evolution 2: evolutionary system</a></li>
 <li class="chapter" data-level="2.5" data-path="p5-projects.html"><a href="p5-projects.html#ant-simulation"><i class="fa fa-check"></i><b>2.5</b> Ant simulation</a></li>
+<li class="chapter" data-level="2.6" data-path="p5-projects.html"><a href="p5-projects.html#big-tree"><i class="fa fa-check"></i><b>2.6</b> Big Tree</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="code-ref.html"><a href="code-ref.html"><i class="fa fa-check"></i><b>3</b> coding reference</a><ul>
 <li class="chapter" data-level="3.1" data-path="code-ref.html"><a href="code-ref.html#python"><i class="fa fa-check"></i><b>3.1</b> Python</a><ul>
