add machine learning notebooks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Tijs Van den Heuvel" />
 
 
-<meta name="date" content="2021-10-22" />
+<meta name="date" content="2021-10-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -147,13 +147,19 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.6" data-path="p5-projects.html"><a href="p5-projects.html#big-tree"><i class="fa fa-check"></i><b>2.6</b> Big Tree</a></li>
 <li class="chapter" data-level="2.7" data-path="p5-projects.html"><a href="p5-projects.html#info-vis"><i class="fa fa-check"></i><b>2.7</b> Info Vis</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="code-ref.html"><a href="code-ref.html"><i class="fa fa-check"></i><b>3</b> coding reference</a><ul>
-<li class="chapter" data-level="3.1" data-path="code-ref.html"><a href="code-ref.html#python"><i class="fa fa-check"></i><b>3.1</b> Python</a><ul>
-<li class="chapter" data-level="3.1.1" data-path="code-ref.html"><a href="code-ref.html#pandas"><i class="fa fa-check"></i><b>3.1.1</b> Pandas</a></li>
+<li class="chapter" data-level="3" data-path="machine-learning-notebooks.html"><a href="machine-learning-notebooks.html"><i class="fa fa-check"></i><b>3</b> Machine learning notebooks</a><ul>
+<li class="chapter" data-level="3.1" data-path="machine-learning-notebooks.html"><a href="machine-learning-notebooks.html#connect-4-reinforcement-learning"><i class="fa fa-check"></i><b>3.1</b> connect-4 Reinforcement learning</a></li>
+<li class="chapter" data-level="3.2" data-path="machine-learning-notebooks.html"><a href="machine-learning-notebooks.html#predicting-absenteeism"><i class="fa fa-check"></i><b>3.2</b> Predicting Absenteeism</a></li>
+<li class="chapter" data-level="3.3" data-path="machine-learning-notebooks.html"><a href="machine-learning-notebooks.html#tweet-analysis-and-emoji-prediction"><i class="fa fa-check"></i><b>3.3</b> Tweet analysis and emoji prediction</a></li>
+<li class="chapter" data-level="3.4" data-path="machine-learning-notebooks.html"><a href="machine-learning-notebooks.html#wikipedia-hyperlink-network"><i class="fa fa-check"></i><b>3.4</b> Wikipedia hyperlink network</a></li>
 </ul></li>
-<li class="chapter" data-level="3.2" data-path="code-ref.html"><a href="code-ref.html#html"><i class="fa fa-check"></i><b>3.2</b> HTML</a><ul>
-<li class="chapter" data-level="3.2.1" data-path="code-ref.html"><a href="code-ref.html#radio-button-group"><i class="fa fa-check"></i><b>3.2.1</b> radio button group</a></li>
-<li class="chapter" data-level="3.2.2" data-path="code-ref.html"><a href="code-ref.html#space"><i class="fa fa-check"></i><b>3.2.2</b> Space</a></li>
+<li class="chapter" data-level="4" data-path="code-ref.html"><a href="code-ref.html"><i class="fa fa-check"></i><b>4</b> coding reference</a><ul>
+<li class="chapter" data-level="4.1" data-path="code-ref.html"><a href="code-ref.html#python"><i class="fa fa-check"></i><b>4.1</b> Python</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="code-ref.html"><a href="code-ref.html#pandas"><i class="fa fa-check"></i><b>4.1.1</b> Pandas</a></li>
+</ul></li>
+<li class="chapter" data-level="4.2" data-path="code-ref.html"><a href="code-ref.html#html"><i class="fa fa-check"></i><b>4.2</b> HTML</a><ul>
+<li class="chapter" data-level="4.2.1" data-path="code-ref.html"><a href="code-ref.html#radio-button-group"><i class="fa fa-check"></i><b>4.2.1</b> radio button group</a></li>
+<li class="chapter" data-level="4.2.2" data-path="code-ref.html"><a href="code-ref.html#space"><i class="fa fa-check"></i><b>4.2.2</b> Space</a></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -176,7 +182,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Tijs Gems</h1>
 <p class="author"><em>Tijs Van den Heuvel</em></p>
-<p class="date" style="margin-top: 1.5em;"><em>2021-10-22</em></p>
+<p class="date" style="margin-top: 1.5em;"><em>2021-10-25</em></p>
 </div>
 <div id="index" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> Index</h1>
